--- a/Spring-Project/src/main/resources/templates/categoryPost.html
+++ b/Spring-Project/src/main/resources/templates/categoryPost.html
@@ -17,9 +17,13 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Admin</a></li>
-                    <li><a href="#">Sign Up</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li th:if="${userDTO != null and userDTO.getAuthority().name() != 'BANNED'}">
+                        <a th:if="${userDTO.getAuthority().name() == 'USER'}" th:href="@{/v1/user/{id}(id=${userDTO.getId()})}">My Page</a>
+                        <a th:if="${userDTO.getAuthority().name() == 'ADMIN'}" th:href="@{/v1/admin}">Admin</a>
+                    </li>
+                    <li><a th:if="${userDTO == null}" th:href="@{/v1/signup}">Sign Up</a></li>
+                    <li th:if="${userDTO == null}"><a th:href="@{/v1/login}">Log In</a></li>
+                    <li th:if="${userDTO != null}"><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
                 </ul>
             </nav>
         </div>
@@ -34,11 +38,13 @@
         <p class="category-title">Business</p>
 
         <div class="category-list-container">
-            <select class="category-list">
-                <option value="1">Business</option>
-                <option value="2">Fitness</option>
-                <option value="3">Finance</option>
-                <option value="4">Art</option>
+            <select class="category-list" name="categoryId"
+                    th:onchange="'location.href=\'' + @{/v1/posts} + '?categoryId=\' + this.value'">
+                <option th:each="category : ${categories}"
+                        th:value="${category.id}"
+                        th:text="${category.name}"
+                        th:selected="${category.id == selectedCategoryId}">
+                </option>
             </select>
         </div>
 
@@ -56,10 +62,13 @@
             <tr th:each="board : ${boards}">
                 <td><img src="/images/cat-icon.png" alt="Cat Icon"></td>
                 <td>
-                    <a th:href="@{/v1/posts/{id}(id=${board.id})}" th:text="${board.title}"></a>
+                    <a th:href="@{/v1/posts/{type}/{id}(type=${board.type == 'notice' ? 'notice' : 'post'},
+                     id=${board.id}, categoryId=${selectedCategoryId})}"
+                       th:text="${board.title}">
+                    </a>
                 </td>
                 <td th:text="${board.authorName}">관리자</td>
-                <td th:text="${board.createdAt}">2024-07-24</td>
+                <td th:text="${board.updatedAt}">2024-07-24</td>
             </tr>
             <tr>
             </tr>
