--- a/Spring-Project/src/main/resources/templates/viewPost.html
+++ b/Spring-Project/src/main/resources/templates/viewPost.html
@@ -15,41 +15,110 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Admin</a></li>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Log In</a></li>
+                <li th:if="${userDTO != null and userDTO.getAuthority().name() != 'BANNED'}">
+                    <a th:if="${userDTO.getAuthority().name() == 'USER'}"
+                       th:href="@{/v1/user/{id}(id=${userDTO.getId()})}">My Page</a>
+                    <a th:if="${userDTO.getAuthority().name() == 'ADMIN'}" th:href="@{/v1/admin}">Admin</a>
+                </li>
+                <li><a th:if="${userDTO == null}" th:href="@{/v1/signup}">Sign Up</a></li>
+                <li th:if="${userDTO == null}"><a th:href="@{/v1/login}">Log In</a></li>
+                <li th:if="${userDTO != null}"><a th:href="@{/v1/logout}" onclick="logoutMessage()">Log Out</a></li>
             </ul>
         </nav>
     </div>
 </header>
 <main>
     <div class="back-button-container">
-        <button th:onclick="|location.href='@{/v1/posts/{id}/edit(id=${board.id})}'|" class="back-button">Go To Back</button>
+        <button th:onclick="|location.href='@{/v1/posts'|" class="back-button">Go To Back
+        </button>
     </div>
     <section class="post-container">
-        <h1 th:text="${board.getTitle()}"></h1>
-        <div class="icon">
-            <img class="icon-img" src="/images/img-place-holder.png">
-            <button th:onclick="|location.href='@{/v1/posts/{id}/edit(id=${board.id})}'|" class="icon-img-add-button">Edit Post</button>
-        </div>
-        <div class="user-information">
-            <div>
-                <div class="user">
-                    <img class="nickname-img" src="/images/nickname-icon.png">
-                    <div class="nickname" th:text="${board.authorName}">Nickname</div>
+
+        <!-- type == notice 일 경우 뷰 -->
+        <div th:if="${type == 'notice'}">
+            <h1 th:text="${board.getTitle()}"></h1>
+            <div class="icon">
+                <img class="icon-img" src="/images/img-place-holder.png">
+                <div th:if="${canEdit}">
+                    <button
+                            th:onclick="|location.href='@{/v1/posts/notice/{id}/edit(id=${board.id})}'|"
+                            class="icon-img-add-button">
+                        Edit Button
+                    </button>
+
+                    <form th:action="@{/v1/posts/notice/{id}(id=${board.id})}" method="post">
+                        <input type="hidden" name="_method" value="delete"/>
+                        <button type="submit" class="delete-button" onclick="return confirm('정말로 이 게시글을 삭제하시겠습니까?')">
+                            Delete
+                        </button>
+                    </form>
                 </div>
-                <div th:text="${board.createdAt}"></div>
+
             </div>
 
-            <div class="download" th:if="${board.application != null}">
-                <img class="download-img" src="/images/link.png">
-                <a href="${board.application}" th:text="${board.application}">애플리케이션 링크</a>
-            </div>
+            <div class="user-information">
+                <div>
+                    <div class="user">
+                        <img class="nickname-img" src="/images/nickname-icon.png">
+                        <div class="nickname" th:text="${board.authorName}">Nickname</div>
+                    </div>
+                    <div th:text="${board.createdAt}"></div>
+                </div>
 
+                <div class="download" th:if="${board.application != null}">
+                    <img class="download-img" src="/images/link.png">
+                    <a href="${board.application}" th:text="${board.application}">애플리케이션 링크</a>
+                </div>
+
+            </div>
+            <form class="input">
+                <textarea th:utext="${board.content}" placeholder="사용해 본 Application에 대한 후기를 남겨주세요!"></textarea>
+            </form>
         </div>
-        <form class="input">
-            <textarea th:utext="${board.content}" placeholder="사용해 본 Application에 대한 후기를 남겨주세요!"></textarea>
-        </form>
+
+        <!-- type == post 일 경우 뷰 -->
+        <div th:if="${type == 'post'}">
+
+            <h1 th:text="${board.getTitle()}"></h1>
+            <div class="icon">
+                <img class="icon-img" src="/images/img-place-holder.png">
+                <div th:if="${canEdit}">
+                    <button
+                            th:onclick="|location.href='@{/v1/posts/post/{id}/edit(id=${board.id})}'|"
+                            class="icon-img-add-button">
+                        Edit Button
+                    </button>
+
+                    <form th:action="@{/v1/posts/post/{id}(id=${board.id})}" method="post">
+                        <input type="hidden" name="_method" value="delete"/>
+                        <button type="submit" class="delete-button" onclick="return confirm('정말로 이 게시글을 삭제하시겠습니까?')">
+                            Delete
+                        </button>
+                    </form>
+                </div>
+
+            </div>
+
+            <div class="user-information">
+                <div>
+                    <div class="user">
+                        <img class="nickname-img" src="/images/nickname-icon.png">
+                        <div class="nickname" th:text="${board.authorName}">Nickname</div>
+                    </div>
+                    <div th:text="${board.createdAt}"></div>
+                </div>
+
+                <div class="download" th:if="${board.application != null}">
+                    <img class="download-img" src="/images/link.png">
+                    <a href="${board.application}" th:text="${board.application}">애플리케이션 링크</a>
+                </div>
+
+            </div>
+            <form class="input">
+                <textarea th:utext="${board.content}" placeholder="사용해 본 Application에 대한 후기를 남겨주세요!"></textarea>
+            </form>
+        </div>
+
         <div class="comment-container">
             <div class="author-createdAt-delete-update-container">
 
@@ -66,7 +135,9 @@
             </div>
 
             <div class="content-container">
-                <p>안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.</p>
+                <p>안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫
+                    댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫 댓글입니다.안녕하세요 첫
+                    댓글입니다.</p>
             </div>
         </div>
         <div class="comment-write">
